--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<script src="wasm_exec.js"></script>
-<script>
-const go = new Go();
-WebAssembly.instantiateStreaming(fetch("game1.wasm"), go.importObject).then(result => {
-    go.run(result.instance);
-});
-</script>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game1</title>
+</head>
+<body>
+    <iframe src="game.html" frameborder="0" width="640" height="480"></iframe>
+</body>
+</html>
